# scalper-uma

./: .gitignore  .graphify_ast.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_detect.json  .graphify_uncached.txt  .pre-commit-config.yaml  AGENTS.md  BUILD.md  IMPROVEMENTS.md  PROGRESS.md  PROJECT_GRAPH.md  README.md  SPEC.md  TODO.md  main.py  pyproject.toml  requirements.txt  test_chart.html
factory/: cron.py  fastapi_app.service  logrotate.conf  nginx.conf  run_algo.bat  settings.yml  setup.sh  systemd-user-service-guide.md  trade.json  uma-scalper.service
scripts/: check_restart_button.sh  check_restart_during_hours.sh  check_server_responding.sh  check_settings_reload.sh  check_websocket_close.sh  deploy.sh  dev-check.sh  fix-port-binding.sh  test_sse_endpoint.sh  verify_auto_restart_resume.sh  verify_restart_button.sh  verify_settings_reload.sh  verify_settings_reset_flow.sh  verify_sse_stream.sh  verify_websocket_close.sh
src/: api.py  constants.py  delete_me.py  logic_app.py  main.py  schemas.py  sim.py  sse_order_client.py  state.py  strategy.py  symbol.py  symbols.py  tick.py  tick_processor.py  tickrunner.py  wserver.py
src/static/: chart.js  index.html  sim.html  styles.css  summary.js  test.html
templates/: logic.html  sleeping.html
tests/: conftest.py  test_tickrunner.py
