[project]
name = "scalper-uma"
version = "0.1.0"
description = "Options trading bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wheel",
    "setuptools==58.2.0",
    "pyopenssl==21.0",
    "numpy==1.26.4",
    "pandas",
    "PyYAML",
    "pendulum",
    "pyotp",
    "apscheduler",
    "stock-brokers @ git+https://github.com/ecomsense/stock-brokers",
    "toolkit @ git+https://github.com/pannet1/toolkit",
    "fastapi[standard]",
    "sse-starlette",
    "requests",
    "websocket-client",
    "pytz",
]

[project.optional-dependencies]
dev = ["pytest", "pre-commit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]

[tool.pre-commit]
repos = [
    {repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.6.0", hooks = [
        {id = "trailing-whitespace"},
        {id = "end-of-file-fixer"},
        {id = "check-yaml"},
        {id = "check-json"},
        {id = "check-added-large-files"},
        {id = "check-merge-conflict"},
    ]},
    {repo = "https://github.com/psf/black", rev = "25.1.0", hooks = [
        {id = "black"},
    ]},
    {repo = "https://github.com/pycqa/ruff", rev = "v0.9.4", hooks = [
        {id = "ruff"},
        {id = "ruff-format"},
    ]},
]

[tool.ruff]
target-version = "py310"
fixable = ["ALL"]
unsafe-fixes = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T20", "FIX", "ARG", "PTH", "PYI", "RSE", "RET", "SLF", "SIM", "TID", "PL", "TRY", "PERF", "PGH", "PIE", "RUF", "NPY", "AIR", "ASYNC", "S"]
ignore = ["E501", "RET503", "PLC0415", "PLW0603", "PLR2004", "S101", "S110"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
